# steam-workshop-downloader

./: .gitignore  Makefile  README.md
backend/: pyproject.toml  requirements.txt  serve.py
backend/src/: api.py  cli.py  downloader.py  server.py
frontend/: next.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DownloadPanel.tsx  WorkshopCard.tsx
frontend/src/lib/: api.ts
